--- a/layout02/style.css
+++ b/layout02/style.css
@@ -84,7 +84,7 @@ body .sidebar{
     grid-area: 1/1/3/2;
     color: #c3c5ca;
     position: fixed;
-    width: 200px;
+    width: auto;
     height: 100vh;
     margin: 0;
     margin-right: 10px;
@@ -126,6 +126,7 @@ li{
 a{
     text-decoration: none;
     color: #f6f7f9;
+
 }
 
 .main{
@@ -282,25 +283,42 @@ a{
     
 }
 
-@media (max-width: 550px){
+@media (max-width: 650px){
     body{
         grid-template-rows: 60px 1fr;
-        grid-template-columns: 1fr;
+        grid-template-columns: 70px 1fr;
         grid-template-areas: 
-        'c1'
-        'c2';
+        'c1 c2'
+        'c1 c3' ;
     }
     .header1{
-        grid-area: c1;
+        grid-area: c2;
         margin: 0;
 
     }
     .main{
-        grid-area: c2;
+        grid-area: c3;
         margin: 0;
     }
 
-    .sidebar{
+    .sidebar {
+        grid-area: c1;
+        width: 45px;
+        height: auto;
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
+    }
+
+    .sidebar img{
+        width: 40px;
+        height: 40px;
+        margin-left: -10px;
+    }
+
+    a{
         display: none;
     }
     
